Attempted to add solutions to the little bugs associated with spacing on the results page.

--- a/site/css/media.css
+++ b/site/css/media.css
@@ -181,7 +181,17 @@
     display: none;
   }
   .componentIconLarge + div{
-    /*width: auto !important;*/
+/*    display: inline-block !important;
+    width: 100% !important;*/
+  }
+  .summar{
+    height: 100% !important;
+  }
+  .summary > div:first-child > span:first-child > div:first-child > div:nth-child(2) > span:first-child > div:first-child{
+    padding: 0px !important;
+  }
+  #toolbar > div:first-child{
+    width: 264px !important;
   }
 }
 
